some extra animations, scrollbar fix

--- a/styles/scss/_footer.scss
+++ b/styles/scss/_footer.scss
@@ -71,6 +71,7 @@ footer a {
     padding: 0 0.2rem;
     margin-bottom: 0.5rem;
     background-color: transparent;
+    opacity: 0.5;
 }
 
 .buttonsContainer button {
@@ -90,7 +91,7 @@ footer a {
 
 .buttonsContainer .useable {
     box-shadow: 0 0 3px grey, 0 0 5px white;
-    animation: pulse 2s infinite;
+    animation: pulse 3.5s infinite;
 }
 
 @keyframes pulse {
@@ -111,7 +112,28 @@ footer a {
 }
 
 .botNav .selectedDot {
-    font-size: 3rem;
+    font-size: 2.5rem;
     text-shadow: 0 0 3px grey, 0 0 5px white;
-    // opacity: 1;
+    animation: pulseDot 4s infinite;
+    opacity: 1;
+}
+
+@keyframes pulseDot {
+	0% {
+		transform: scale(0.95);
+        text-shadow: 0 0 3px grey, 0 0 5px white;
+        opacity: 0.75;
+	}
+
+	70% {
+		transform: scale(1);
+        text-shadow: 0 0 3px grey, 0 0 5px white;
+        opacity: 1;
+	}
+
+	100% {
+		transform: scale(0.95);
+        text-shadow: 0 0 3px grey, 0 0 5px white;
+        opacity: 0.75;
+	}
 }
